module12/httpserver.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: httpserver
  labels:
    istio-injection: enabled
---
# service0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service0
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service0
  template:
    metadata:
      labels:
        app: service0
    spec:
      containers:
        - name: service0
          image: service0:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service0
  namespace: httpserver
spec:
  ports:
    - name: http-service0
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service0
---
# service1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: service1:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: httpserver
spec:
  ports:
    - name: http-service1
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service1
---
# service2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: service2:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: httpserver
spec:
  ports:
    - name: http-service2
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service2
